<resources>
    <string name="app_name">Economics Festival</string>
    <string name="content_description" translatable="false">null</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_info">Info</string>
    <string name="title_map">Map</string>
    <string name="official_site_url" translatable="false">https://2019.festivaleconomia.eu/</string>
    <string name="map_show_route">get directions…</string>
    <plurals name="map_events_here">
        <item quantity="one">%d event here</item>
        <item quantity="other">%d events here</item>
    </plurals>
    <string name="sessions_agenda" translatable="false">Agenda</string>
    <string name="shared_preferences_file" translatable="false">preferences</string>
    <string name="pref_showlocal" translatable="false">show_local</string>
    <string name="filters">Filters</string>
    <string name="a11y_clear_tag_filters">Clear filters</string>
    <string name="reset">Reset</string>
    <string name="a11y_collapse_filters_sheet">Lower filters sheet</string>
    <string name="tags_topics">Topics</string>
    <string name="tags_types">Types</string>
    <string name="starred_events">Your starred events</string>
    <string name="starred_events_short">Starred</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_favorites">Favorites</string>
    <plurals name="time_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="time_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="filtered_sessions">
        <item quantity="zero">%d sessions</item>
        <item quantity="one">%d session</item>
        <item quantity="other">%d sessions</item>
    </plurals>
    <string name="login_error">Login failed with error code: %1$d</string>
    <string name="logout_dialog_title">Log out?</string>
    <string name="logout_dialog_msg">This will log you out of the app.</string>
    <string name="logout_dialog_accept">Accept</string>
    <string name="logout_dialog_cancel">Cancel</string>
    <string name="login_confirm_title">Log in?</string>
    <string name="login_confirm_msg">Log in to save events and review sessions. Actions will be synchronized with your
        account across devices.
    </string>
    <string name="login_confirm_accept">Login</string>
    <string name="login_confirm_cancel">Not now</string>
    <string name="starred">Session added to favorites</string>
    <string name="unstarred">Session removed from favorites</string>
    <string name="starred_unstarred_not_show">Do not show</string>
    <string name="session_info_organizers">ORGANIZERS</string>
    <string name="session_info_related_events">RELATED EVENTS</string>
    <string name="action_share">share</string>
    <string name="action_location">location</string>
    <string name="session_info_share_msg">Share via</string>
    <string name="session_info_share">Have a look at this event:</string>
    <string name="session_info_info">Event info</string>
    <string name="session_info_website">Official website</string>
    <string name="a11y_starred">Event bookmarked</string>
    <string name="a11y_unstarred">Event not bookmarked</string>
    <string name="map_programmed_events">PROGRAMMED EVENTS</string>
    <string name="session_list_download_error">Oops, there was a problem. Try again later!</string>
    <string name="speaker_headshot_transition" translatable="false">speaker_headshot</string>
    <string name="organizer_link_website">Website</string>
    <string name="organizer_link_twitter" translatable="false">Twitter</string>
    <string name="organizer_link_linkedin" translatable="false">LinkedIn</string>
    <string name="organizer_link_facebook" translatable="false">Facebook</string>
    <string name="info_event">Event</string>
    <string name="info_faq" translatable="false">FAQ</string>
    <string name="info_about" translatable="false">About</string>
    <string name="info_settings">Settings</string>
    <string name="info_about_version" translatable="false">v. 1.6.1</string>
    <string name="info_about_author" translatable="false">by Claudio \"iClaude\" Agostini</string>
    <string name="info_about_desc_title">Description</string>
    <string name="info_about_desc">Economics Festival is the %1$s dedicated to the %2$s,
        held in Trento (Italy) from May 30 to June 3.
    </string>
    <string name="info_about_desc_unofficial_app">unofficial app</string>
    <string name="info_about_desc_economics_festival">Economics Festival 2019</string>
    <string name="info_about_nerd_title">Nerd\'s details</string>
    <string name="info_about_nerd">The UI an logic of the app is based on the Google IO 2018 official app. The source
        code (written in Kotlin), on the other hand, is mostly written from scratch.\nThe app is based on the MVVM
        pattern and
        makes use of the following libraries: Android Material, Architecture and Navigation Components, Kotlin coroutines,
        Firebase Firestore and authentication UI, Dagger2, Google Maps, ThreeTenAbp, Glide, Lottie animations.
    </string>
    <string name="info_about_github_title" translatable="false">GitHub repository</string>
    <string name="info_about_github">The app is open source and can be found at this %s.</string>
    <string name="info_about_githubrepo" translatable="false">GitHub repository</string>
    <string name="info_about_linkedInUrl" translatable="false">https://www.linkedin.com/in/claudio-agostini-241109a8/</string>
    <string name="info_about_githubUrl" translatable="false">https://github.com/iClaude/FestivalEconomia2019</string>
    <string name="info_about_googleIOappUrl" translatable="false">https://github.com/google/iosched</string>
    <string name="info_about_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="info_about_privacy_policy_link" translatable="false">
        https://drive.google.com/file/d/19iOz3EP86Z0K2i3nsbiwjQQuABxzktC6/view?usp=sharing
    </string>
    <string name="info_pref_notifications_category_key" translatable="false">notifications</string>
    <string name="info_pref_notifications_category">Notifications</string>
    <string name="info_pref_notifications_key" translatable="false">notifications_enabled</string>
    <string name="info_pref_notifications_title">Enable notifications</string>
    <string name="info_pref_notifications_summary">Only for favorite events</string>
    <string name="info_pref_notifications_hours_key" translatable="false">hours</string>
    <string name="info_pref_notifications_hours">Advance</string>
    <string name="info_pref_notifications_hours_default_summary">1 hour before the event</string>
    <plurals name="info_pref_notifications_hours_summary">
        <item quantity="one">%d hour before the event</item>
        <item quantity="other">%d hours before the event</item>
    </plurals>
    <string name="info_pref_others_category_key" translatable="false">others</string>
    <string name="info_pref_others_category">Others</string>
    <string name="info_pref_timezone_key" translatable="false">trento_timezone</string>
    <string name="info_pref_timezone_title">Trento time zone</string>
    <string name="info_pref_timezone_summary">Show times in the event\'s time zone</string>
    <string name="info_pref_theme_key" translatable="false">theme</string>
    <string name="info_pref_theme_title">Theme</string>
    <string-array name="info_pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Set by Battery Saver</item>
    </string-array>
    <string-array name="info_pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="info_pref_website_key" translatable="false">website</string>
    <string name="info_pref_website_title">Official website</string>
    <string name="info_pref_website_summary">Go to event\'s official website</string>
    <string name="notification_channel_name">Favorite events</string>
    <string name="notification_channel_description">Receive notifications 1 hour before favorite events begin</string>
    <string name="notification_speakers">Speakers</string>
    <string name="notification_directions">Take me there</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="faq_train_title">Arriving: by train</string>
    <string name="faq_train_description">Trento is on the Verona-Brennero-Monaco axis. All trains to and from Verona and
        Bolzano stop in Trento. There is a direct link with Venice-Mestre; Valsugana-Bassano; Grappa-Castelfranco
        Veneto.
    </string>
    <string name="faq_car_title">Arriving: by car</string>
    <string name="faq_car_description">A22 Brennero motorway. Take the exit at Trento Sud (approx. 90 km from North
        Verona) or Trento Nord (58 km from Bolzano); taking SS no. 12 at Abetone-Brennero, along the Valle dell\'Adige.
        \n\nComing from Padova, Bassano, Belluno, take the SS no. 47 at Valsugana (super-highway), while for those
        arriving
        from the Lombard zone of Lago di Garda, take the SS no. 45bis at Gardesana occidentale. \n\nFor more information
        call the toll-free number 800 994411 run by the Autonomous Province of Trento or visit
        www.viaggiareintrentino.it.
    </string>
    <string name="faq_air_title">Arriving: by air</string>
    <string name="faq_air_description">The nearest airports are in Bolzano (60 km), Verona (97 km), Treviso (140 km),
        Brescia-Montichiari (160 km), Venice (173 km), Milan Linate (223 km), Milan Malpensa (250 km), Bergamo Orio al
        Serio (180 km), Bologna (220 km), and Innsbruck (177 km).
    </string>
    <string name="faq_gettingaround_title">Getting around</string>
    <string name="faq_gettingaround_description">All the Festival venues can be reached easily on foot. The Festival
        provides bicycles free of charge at the Bicigrill in Piazza Fiera. \n\nThe historic centre is a
        traffic-restricted area (ZTL) where circulation of vehicles is prohibited at certain times. In the town paid
        parking spaces are indicated in blue (between 8.00-19.30 on weekdays, Saturdays included).
    </string>
    <string name="faq_parkingcoaches_title">Parking: coaches</string>
    <string name="faq_parkingcoaches_description">%1$s: via Petrarca, Lungadige San Nicolò, via R. da Sanseverino.
        \n\n%2$s: in Lungadige Monte Grappa, Via Alfieri, Via Bernardo Clesio and Corso degli Alpini, in the ex
        Zuffo piazzale, near the Shuttle Bus stop, paid parking. \n\nFor more information contact the %3$s in
        Trento-Monte Bondone, Tel. +39 0461 889111.
    </string>
    <string name="info_title">Economics Festival 2019</string>
    <string name="info_subtitle">Globalization, nationalism and representation</string>
    <string name="info_focus">The focus of the 14th edition of the %1$s in Trento is: “%2$s”. Every year, Nobel prize
        winners and internationally-renowned scholars, politicians, intellectuals, economists, trade unionists and
        journalists, discuss and debate with the audience of the festival on extremely important and contemporary issues.
        \n\nAmong others,
        %3$s from Berkeley will talk about universal basic income; %4$s e %5$s about the origins of sovereignism and populism;
        %6$s will question the relationship between globalization and inequality,
        %7$s about the risks of secular stagnation in advanced countries, %8$s will talk about the  sustainability of Italian public debt.</string>
    <string name="info_editorial_link">continue to read the editorial by Tito Boeri…</string>
</resources>