<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
            app:key="@string/info_pref_timezone_key"
            app:title="@string/info_pref_timezone_title"
            app:summary="@string/info_pref_timezone_summary"
            app:defaultValue="true"/>

    <SwitchPreferenceCompat
            app:key="@string/info_pref_notifications_key"
            app:title="@string/info_pref_notifications_title"
            app:summary="@string/info_pref_notifications_summary"
            app:defaultValue="true"/>

    <Preference
            app:key="@string/info_pref_website_key"
            app:title="@string/info_pref_website_title"
            app:summary="@string/info_pref_website_summary"
            app:icon="@drawable/ic_web_black_24dp">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/official_site_url"/>
    </Preference>

</androidx.preference.PreferenceScreen>