<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".ui.info.AboutFragment"
                                                       android:id="@+id/constraintLayout"
                                                       android:padding="@dimen/margin_normal">

        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAppName"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@+id/lottieView"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/info_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersion"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"/>
        <TextView
                android:text="@string/info_about_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAuthor"
                app:layout_constraintTop_toBottomOf="@+id/tvVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvAppName" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:text="@string/info_about_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescTitle"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                />
        <TextView
                android:text="@string/info_about_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDesc" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDescTitle" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:text="@string/info_about_nerd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNerdTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvGithub"
                />

        <TextView
                android:text="@string/info_about_nerd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNerd"
                app:layout_constraintTop_toBottomOf="@+id/tvNerdTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/info_about_github_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGithubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc"
                />

        <TextView
                android:text="@string/info_about_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGithub"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvGithubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:lottie_fileName="lottie/app_info.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_scale="1.2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>