<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/info_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

        <TextView
                android:text="@string/info_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:textStyle="bold"/>

        <TextView
                android:text="@string/info_focus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvFocus"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                />

        <ImageView
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:srcCompat="@drawable/img_tito_boeri"
                android:id="@+id/ivVideo"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvFocus"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description"/>

        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/scrim"
                android:contentDescription="@string/content_description"
                android:foreground="?selectableItemBackgroundBorderless"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@id/ivVideo"
                app:layout_constraintEnd_toEndOf="@id/ivVideo"
                app:layout_constraintStart_toStartOf="@id/ivVideo"
                app:layout_constraintTop_toTopOf="@+id/ivVideo"
                app:srcCompat="@drawable/ic_play"
                android:id="@+id/ibVideo"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0"/>

        <TextView
                android:text="@string/info_editorial_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEditorialLink"
                app:layout_constraintTop_toBottomOf="@+id/ivVideo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
